--- a/cloud-based-future.html
+++ b/cloud-based-future.html
@@ -324,13 +324,16 @@
   <main class="main">
     <!-- HERO -->
     <section class="hero">
-      <div class="hero-inner">
+      <div class="hero-inner" style="grid-template-columns: 1fr 500px; align-items: flex-start; gap: 2rem;">
         <div>
           <div class="hero-eyebrow">Case Study: Cloud-Based Technology Transformation</div>
           <h1 class="hero-title">From Reactive to <span class="hero-highlight">Resilient</span></h1>
           <p class="hero-body">
             How 3N Consulting Transformed a State Treasury's IT Operations Through Cloud Readiness Assessment and Governance Redesign
           </p>
+        </div>
+        <div style="border-radius: 0.75rem; overflow: hidden; box-shadow: 0 12px 30px rgba(56,189,248,0.2);">
+          <img src="images/cloud.png" alt="Cloud-Based Technology Transformation" style="width: 100%; height: auto; display: block;">
         </div>
       </div>
     </section>
@@ -389,7 +392,7 @@
     <section class="section">
       <div class="section-inner">
         <div style="border-radius: 1rem; overflow: hidden; box-shadow: 0 12px 30px rgba(15,23,42,0.04);">
-          <img src="images/case study 2 pic.png" alt="Cloud-Based Future Case Study" style="width: 100%; height: auto; display: block;">
+          <img src="images/case study 2 pic.png" alt="Cloud-Based Future Case Study" style="width: 110%; height: auto; display: block;">
         </div>
       </div>
     </section>
@@ -473,24 +476,23 @@
 
   <footer class="site-footer">
     <div class="footer-inner">
-      <div>
-        <h4>About 3N Consulting</h4>
-        <p><strong>Results. Delivered.</strong></p>
-        <p style="font-size: 0.85rem;">Execution-focused consulting measured on outcomes.</p>
+      <div style="flex: 1; min-width: 200px;">
+        <div style="font-weight: 600; margin-bottom: 0.5rem;">3N Consulting</div>
+        <p style="color: #6b7280;">Results. Delivered.</p>
       </div>
-      <div>
-        <h4>Contact Information</h4>
-        <p>📞 (301) 723-7057</p>
-        <p>📍 6710A Rockledge Drive<br>Bethesda, MD 20817</p>
-      </div>
-      <img src="images/logos/Certified NMSDC MBE Logo.png" alt="Footer Image" class="footer-image" style="max-width: 150px; height: auto;">
       <div class="footer-links">
+        <a href="https://www.linkedin.com/company/3n-consulting-group/posts/?feedView=all" target="_blank">LinkedIn</a>
         <a href="index.html">Home</a>
-        <a href="about.html">About Us</a>
-        <a href="contact.html">Contact Us</a>
-        <a href="case-studies.html">Case Studies</a>
+        <a href="about.html">About</a>
+        <a href="services.html">Services</a>
+        <a href="contact.html">Contact</a>
+        <a href="thought-leadership.html">Meet Our Team</a>
+        <a href="toolkit.html">Our Toolkit</a>
         <a href="disclaimers.html">Disclaimers</a>
       </div>
+    </div>
+    <div style="text-align: center; margin-top: 1.5rem; padding-top: 1.5rem; border-top: 1px solid #e5e7eb; color: #9ca3af;">
+      <p>&copy; 2024 3N Consulting. All rights reserved.</p>
     </div>
   </footer>
 </div>
