--- a/data-silos.html
+++ b/data-silos.html
@@ -378,13 +378,16 @@
   <main class="main">
     <!-- HERO -->
     <section class="hero">
-      <div class="hero-inner">
+      <div class="hero-inner" style="grid-template-columns: 1fr 500px; align-items: flex-start; gap: 2rem;">
         <div>
           <div class="hero-eyebrow">Case Study: Data Integration & Analytics Platform</div>
           <h1 class="hero-title">From Data Silos to <span class="hero-highlight">Data Strategy</span></h1>
           <p class="hero-body">
             How 3N Consulting Built a Statewide Analytics Platform to Strengthen Maryland's Educator Pipeline
           </p>
+        </div>
+        <div style="border-radius: 0.75rem; overflow: hidden; box-shadow: 0 12px 30px rgba(56,189,248,0.2);">
+          <img src="images/md_education.png" alt="Maryland Education Data Integration" style="width: 100%; height: auto; display: block;">
         </div>
       </div>
     </section>
