--- a/o-ram-case-study.html
+++ b/o-ram-case-study.html
@@ -545,25 +545,23 @@
 
   <footer class="site-footer">
     <div class="footer-inner">
-      <div>
-        <h4>About 3N Consulting</h4>
-        <p><strong>Results. Delivered.</strong></p>
-        <p style="font-size: 0.85rem;">Execution-focused consulting measured on outcomes.</p>
+      <div style="flex: 1; min-width: 200px;">
+        <div style="font-weight: 600; margin-bottom: 0.5rem;">3N Consulting</div>
+        <p style="color: #6b7280;">Results. Delivered.</p>
       </div>
-      <div>
-        <h4>Contact Information</h4>
-        <p>📞 (301) 723-7057</p>
-        <p>📍 6710A Rockledge Drive<br>Bethesda, MD 20817</p>
+      <div class="footer-links">
+        <a href="https://www.linkedin.com/company/3n-consulting-group/posts/?feedView=all" target="_blank">LinkedIn</a>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="services.html">Services</a>
+        <a href="contact.html">Contact</a>
+        <a href="thought-leadership.html">Meet Our Team</a>
+        <a href="toolkit.html">Our Toolkit</a>
+        <a href="disclaimers.html">Disclaimers</a>
       </div>
-      <div>
-        <h4>Quick Links</h4>
-        <div class="footer-links">
-          <a href="index.html">Home</a>
-          <a href="about.html">About Us</a>
-          <a href="contact.html">Contact Us</a>
-          <a href="disclaimers.html">Disclaimers</a>
-        </div>
-      </div>
+    </div>
+    <div style="text-align: center; margin-top: 1.5rem; padding-top: 1.5rem; border-top: 1px solid #e5e7eb; color: #9ca3af;">
+      <p>&copy; 2024 3N Consulting. All rights reserved.</p>
     </div>
   </footer>
 </div>
