many edits made to about.html

--- a/about.html
+++ b/about.html
@@ -263,15 +263,18 @@
       </div>
     </section>
 
-    <!-- OUR MISSION -->
+    <!-- WHO WE ARE -->
     <section class="section section-alt">
       <div class="section-inner">
         <div class="section-header">
-          <h2 class="section-title">Our Mission</h2>
+          <h2 class="section-title">Who We Are</h2>
         </div>
         <div class="content-block">
+          <p style="margin-bottom: 1.5rem;">
+            3N Consulting is a Maryland-based certified Minority Business Enterprise (MBE) in the Small Business Reserve (SBR) program and an NMSDC certified MBE. With extensive experience serving public agencies, educational institutions, and private sector organizations, we bring deep expertise in organizational redesign, strategy & operations, data analytics, digital transformation, and human capital management.
+          </p>
           <p>
-            3N Consulting is dedicated to delivering measurable results through execution-focused consulting. We build long-term partnerships with our clients, take ownership of outcomes, and practice frugality to ensure savings flow directly to our clients.
+            3N Consulting is dedicated to delivering measurable results through execution-focused consulting. We build long-term partnerships with our clients, take ownership of outcomes, and practice frugality to ensure savings flow directly to our clients. We combine strategic thinking with operational excellence to deliver sustainable change. Our team consists of experienced consultants who understand the complexities of modern business and are committed to helping organizations navigate challenges and seize opportunities.
           </p>
         </div>
       </div>
@@ -306,29 +309,38 @@
       </div>
     </section>
 
-    <!-- WHO WE ARE -->
+    <!-- OUR STORY -->
     <section class="section section-alt">
       <div class="section-inner">
         <div class="section-header">
-          <h2 class="section-title">Who We Are</h2>
+          <h2 class="section-title">Our Story</h2>
         </div>
         <div class="content-block">
+          <p style="margin-bottom: 1.5rem;">
+            3N Consulting was founded in 2023, when CEO Nick Gupta returned to Maryland after two decades of working across major cities and serving clients around the world. Motivated by a desire to strengthen local organizations and tap into the region's deep pool of talent, he set out to build a consulting firm rooted in community impact, excellence, and integrity.
+          </p>
+          <p style="margin-bottom: 1.5rem;">
+            By 2024, 3N Consulting's core team had taken shape. Since then, we have grown quarter after quarter, propelled by a clear and consistent philosophy: deliver high-quality, high-impact consulting services at rates that make world-class support accessible. This commitment enables us to compete—and win—against leading global consulting firms by combining exceptional work quality with what clients often describe as "shockingly" reasonable prices.
+          </p>
           <p>
-            3N Consulting is a Maryland-based certified Minority Business Enterprise (MBE) in the Small Business Reserve (SBR) program and an NMSDC certified MBE. With extensive experience serving public agencies, educational institutions, and private sector organizations, we bring deep expertise in organizational redesign, strategy & operations, data analytics, digital transformation, and human capital management.
+            We have successfully delivered on every engagement to date. Clients regularly extend our partnerships into subsequent phases of work, and many of our new projects come directly from referrals. Their trust and continued support serve as the engine of our growth and a testament to the value we strive to create for every organization we work with.
           </p>
         </div>
       </div>
     </section>
 
-    <!-- OUR APPROACH -->
-    <section class="section">
+    <!-- OUR WORK -->
+    <section class="section section-alt">
       <div class="section-inner">
         <div class="section-header">
-          <h2 class="section-title">Our Approach</h2>
+          <h2 class="section-title">Our Work</h2>
         </div>
         <div class="content-block">
+          <p style="margin-bottom: 1.5rem;">
+            When 3N Consulting was founded, past clients immediately reached out to re-engage our leadership, trusting us to deliver fast, high-impact results. We consistently meet client timelines and help organizations solve their most pressing operational challenges. Our engagements have included optimizing operations and production facilities to meet rising demand, redesigning administrative and shared services for cost and productivity gains, and building centralized procurement functions that standardize purchasing and capture volume discounts.
+          </p>
           <p>
-            We combine strategic thinking with operational excellence to deliver sustainable change. Our team consists of experienced consultants who understand the complexities of modern business and are committed to helping organizations navigate challenges and seize opportunities.
+            Our client portfolio spans private equity firms, Fortune 500 companies, federal, state, and local government agencies, intergovernmental organizations, and leading higher education institutions. We have successfully delivered projects under fixed-fee, outcome-based, contingent-fee, and value-based structures. We also provide pro bono consulting services for selected causes and take pride in contributing to the Montgomery County, MD community.
           </p>
         </div>
       </div>
