--- a/cio-services.html
+++ b/cio-services.html
@@ -249,7 +249,7 @@
   <header class="site-header">
     <div class="nav-inner">
       <div class="brand">
-        <img src="images/3nlogo.png" alt="3N Consulting Logo" style="height: 70px; width: auto; max-width: 250px;">
+        <img src="images/logos/new 3n logo.png" alt="3N Consulting Logo" style="height: 90px; width: auto; max-width: 300px;">
       </div>
       <button class="nav-toggle" aria-label="Toggle navigation">Menu</button>
       <nav class="nav-links">
