added image to manufacturing page, and made all cards clickable in index.html

--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
 
         <div class="grid-5-symmetrical">
           <article class="card">
-            <a href="organizational-redesign.html" style="text-decoration: none; color: inherit;">
+            <a href="organizational-redesign.html" style="text-decoration: none; color: inherit; display: block;">
               <div class="card-title">Organizational Redesign</div>
               <p class="card-body">
                 Align structure, people, and processes for resilience and agility.
@@ -499,7 +499,7 @@
           </article>
 
           <article class="card">
-            <a href="data-analytics.html" style="text-decoration: none; color: inherit;">
+            <a href="data-analytics.html" style="text-decoration: none; color: inherit; display: block;">
               <div class="card-title">Data Analytics</div>
               <p class="card-body">
                 Frameworks &amp; dashboards that uncover patterns and predict trends.
