--- a/careers2.html
+++ b/careers2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Careers - 3N Consulting</title>
+  <title>Job Opportunities - 3N Consulting</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     /* Inline CSS so this preview actually renders with layout */
@@ -121,70 +121,33 @@
       margin-bottom: 1.5rem;
     }
 
-    .content-block {
-      color: #4b5563;
-      font-size: 0.98rem;
-      line-height: 1.8;
-      margin-bottom: 2rem;
+    .under-construction {
+      text-align: center;
+      padding: 4rem 1.5rem;
     }
 
-    .content-block h3 {
-      font-size: 1.3rem;
+    .under-construction-inner {
+      max-width: 600px;
+      margin: 0 auto;
+    }
+
+    .construction-icon {
+      font-size: 4rem;
+      margin-bottom: 1.5rem;
+    }
+
+    .construction-title {
+      font-size: 2rem;
       font-weight: 700;
       color: #111827;
       margin-bottom: 1rem;
-      margin-top: 1.5rem;
     }
 
-    .content-block ul {
-      list-style: none;
-      padding: 0;
-      margin: 1.5rem 0;
-    }
-
-    .content-block li {
-      padding: 0.5rem 0 0.5rem 1.8rem;
-      position: relative;
-    }
-
-    .content-block li::before {
-      content: '→';
-      position: absolute;
-      left: 0;
-      color: #38bdf8;
-      font-weight: 600;
-    }
-
-    .highlight-box {
-      background: linear-gradient(135deg, #f0f9ff 0%, #e0f2fe 100%);
-      border: 1px solid #38bdf8;
-      border-radius: 1rem;
-      padding: 1.5rem;
-      margin: 1.5rem 0;
-    }
-
-    .highlight-box p {
-      font-size: 0.95rem;
+    .construction-text {
+      font-size: 1rem;
       color: #4b5563;
+      margin-bottom: 2rem;
       line-height: 1.8;
-    }
-
-    .email-link {
-      color: #38bdf8;
-      text-decoration: none;
-      font-weight: 600;
-    }
-
-    .email-link:hover {
-      text-decoration: underline;
-    }
-
-    .cta-section {
-      text-align: center;
-      padding: 2rem;
-      background: #f3f4f6;
-      border-radius: 1rem;
-      margin-top: 3rem;
     }
 
     .btn {
@@ -255,7 +218,7 @@
         <a href="index.html">Home</a>
         <a href="about.html">About Us</a>
         <a href="services.html">Services</a>
-        <a href="careers.html" class="active">Careers</a>
+        <a href="careers.html">Careers</a>
         <a href="contact.html">Contact Us</a>
         <a href="thought-leadership.html">Meet Our Team</a>
         <a href="toolkit.html">Our Toolkit</a>
@@ -265,60 +228,21 @@
   </header>
 
   <main class="main">
-    <!-- HERO -->
-    <section class="hero">
-      <div class="hero-inner">
-        <div>
-          <div class="hero-eyebrow">Join Our Team</div>
-          <h1 class="hero-title">We're Hiring</h1>
-          <p class="hero-body">
-            We're looking for energetic and entrepreneurial talent to join 3N Consulting and make a real impact on our clients' success.
-          </p>
-        </div>
-      </div>
-    </section>
-
-    <!-- CAREER OPPORTUNITIES -->
+    <!-- UNDER CONSTRUCTION -->
     <section class="section section-alt">
       <div class="section-inner">
-        <div class="section-header">
-          <h2 class="section-title">Career Opportunities</h2>
-        </div>
-        <div class="content-block">
-          <p>
-            We are always on the lookout for energetic and entrepreneurial talent. We are currently implementing our next ATS (Applicant Tracking System). Stay tuned!
-          </p>
-          <a href="careers2.html" class="btn btn-primary" style="display: inline-flex; margin: 1.5rem 0;">Explore Jobs →</a>
-          <div class="highlight-box">
-            <p><strong>If you have any other questions regarding careers at 3N, you may direct any inquiries to:</strong></p>
-            <p><a href="mailto:careers@3nconsultinggroup.com" class="email-link">careers@3nconsultinggroup.com</a></p>
+        <div class="under-construction">
+          <div class="under-construction-inner">
+            <div class="construction-icon">🚧</div>
+            <h1 class="construction-title">Page Under Construction</h1>
+            <p class="construction-text">
+              We're currently building our job opportunities page. Check back soon for exciting career opportunities at 3N Consulting!
+            </p>
+            <a href="careers.html" class="btn btn-primary">← Back to Careers</a>
           </div>
         </div>
       </div>
     </section>
-
-    <!-- WHY JOIN 3N -->
-    <section class="section">
-      <div class="section-inner">
-        <div class="section-header">
-          <h2 class="section-title">Why Join 3N Consulting?</h2>
-          <p class="section-subtitle">
-            Be part of a team that values integrity, ownership, and results.
-          </p>
-        </div>
-        <div class="content-block">
-          <ul>
-            <li>Work with a team that maintains integrity and values client success</li>
-            <li>Ownership mindset—we own our results</li>
-            <li>Cost-conscious culture—we pass savings to clients</li>
-            <li>Opportunity to work on high-impact projects with leading organizations</li>
-            <li>Collaborative environment with experienced consultants</li>
-          </ul>
-        </div>
-      </div>
-    </section>
-
-
   </main>
 
   <footer class="site-footer">
