--- a/careers.html
+++ b/careers.html
@@ -286,7 +286,7 @@
         </div>
         <div class="content-block">
           <p>
-            We are always on the lookout for energetic and entrepreneurial talent. We are currently implementing our next ATS (Applicant Tracking System). Stay tuned!
+            We are always on the lookout for energetic and entrepreneurial talent.
           </p>
           <a href="careers2.html" class="btn btn-primary" style="display: inline-flex; margin: 1.5rem 0;">Explore Jobs →</a>
           <div class="highlight-box">
