--- a/marc-hochman.html
+++ b/marc-hochman.html
@@ -308,7 +308,7 @@
       </div>
     </div>
     <div style="text-align: center; margin-top: 1.5rem; padding-top: 1.5rem; border-top: 1px solid #e5e7eb; color: #9ca3af;">
-      <p>&copy; 2024 3N Consulting. All rights reserved.</p>
+      <p>&copy; 2026 3N Consulting. All Rights Reserved.</p>
     </div>
   </footer>
 </div>
