--- a/solutions.html
+++ b/solutions.html
@@ -113,7 +113,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 3N Consulting. All rights reserved.</p>
+                <p>&copy; 2026 3N Consulting. All Rights Reserved.</p>
             </div>
         </div>
     </footer>
